objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>process 1</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Customer_emoticon__c</fullName>
        <formula>IF(   (TEXT( Customer_emoticon_value__c ) ==&quot;&quot;)  ,&quot;&quot; ,IMAGE( &quot;resource/pkb_mobile/imgs/&quot;+TEXT( Customer_emoticon_value__c ) +&quot;.png&quot; ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the customer was feeling when he enter the support case.</inlineHelpText>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_value__c</fullName>
        <description>Store the emoticon as a text value.</description>
        <label>Customer emoticon value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>happy</fullName>
                </value>
                <value>
                    <fullName>confused</fullName>
                </value>
                <value>
                    <fullName>annoyed</fullName>
                </value>
                <value>
                    <fullName>frustrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Number__c</fullName>
        <label>Test Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pkbgeolocalization__c</fullName>
        <description>Store the geolocalization of the customer on case creation from mobile.</description>
        <inlineHelpText>Where the customer was when the case has been created</inlineHelpText>
        <label>Customer Geolocalization</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Author_External_Id__c</fullName>
        <label>Author External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Username__c</fullName>
        <label>Author Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__twitterId__c</fullName>
        <externalId>true</externalId>
        <label>Conversation External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>